--- a/input/includes/logo.html
+++ b/input/includes/logo.html
@@ -1,5 +1,5 @@
 <div id="hl7-nav">
-    <a id="logo" no-external="true" href="https://www.hl7.ch/">
-        <img alt="visit the website" height="60" src="hl7-logo.png" />
+    <a id="logo" no-external="true" href="https://umzh.uzh.ch/">
+        <img alt="visit the website" height="60" src="https://umzh.uzh.ch/favicon.ico" />
     </a>            
 </div>
